@@ -13,6 +13,7 @@ Current:
       - AT90USB162
       - ATtiny88
       - ATmega328P
+      - ATmega1284P
       - ATmega128RFA1
       - ATxmega128A1 rev D
       - ATxmega128A1
