@@ -1,3 +1,7 @@
+2009-02-25  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
+
+	* avrdude.conf.in (ATmega1284P): new device.
+
 2009-02-23  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
 
 	More fixes for Solaris, including fixes for the Sunpro compiler:
